--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r fastapi/requirements.txt  # Modificado para apuntar a fastapi/requirements.txt
+          pip install -r fastapi/requirements.txt  # Asegúrate de que esta ruta es correcta
 
       - name: Lint with flake8
         run: |
@@ -31,5 +31,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
       - name: Test with pytest
+        env:
+          PYTHONPATH: fastapi  # Agrega fastapi al PYTHONPATH
         run: |
           pytest test/
