--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,15 +23,17 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r fastapi/requirements.txt  # Asegúrate de que esta ruta es correcta
+          pip install -r fastapi/requirements.txt
 
       - name: Lint with flake8
         run: |
+          pip install flake8
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
       - name: Test with pytest
         env:
-          PYTHONPATH: fastapi  # Agrega fastapi al PYTHONPATH
+          PYTHONPATH: fastapi
         run: |
+          pip install pytest
           pytest test/
