--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -1,7 +1,12 @@
 pydantic==1.10.4
-fastapi
+fastapi==0.78.0
 pandas
 sqlalchemy
 pytest
 flake8
 httpx
+alembic
+sqlalchemy-utils
+uvicorn==0.17.6
+python-dotenv
+faker
