--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pydantic==1.10.4
-fastapi
+fastapi==0.78.0
 pandas
 sqlalchemy
 pytest
@@ -7,6 +7,6 @@ flake8
 httpx
 alembic
 sqlalchemy-utils
-uvicorn
+uvicorn==0.17.6
 python-dotenv
 faker
