--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,6 +34,6 @@ jobs:
 
       - name: Test with pytest
         env:
-          PYTHONPATH: "${{ github.workspace }}/app"
+          PYTHONPATH: "${{ github.workspace }}:${{ github.workspace }}/app"
         run: |
           pytest test/
