--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r fastapi/requirements.txt
+          pip install -r streamlit/requirements.txt
 
       - name: Lint with flake8
         run: |
