--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          pip install -r fastapi/requirements.txt
+          pip install -r streamlit/requirements.txt
           pip install pytest
 
       - name: Run tests
