--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r fastapi/requirements.txt
+          pip install -r app/requirements.txt
           pip install -r streamlit/requirements.txt
 
       - name: Lint with flake8
