Corregido docker-compose.yml y el router de tratamientos

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,24 @@ services:
     container_name: app
     volumes:
       - mis_datos:/var/lib/docker/volumes/aa-streamlit-fastapi_mis_datos/_data
+
+  mongodb:
+    image: mongo:latest
     environment:
-      - MONGO_URI=mongodb://mongo:27017  # URI para conectar con MongoDB
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=example
+      - MONGO_LOG_LEVEL=2  # Configura el nivel de log de MongoDB
+      - storage.wiredTiger.engineConfig.journalCompressor=zlib
+    ports:
+      - 27017:27017
+    networks:
+      - deploy_network
+    container_name: mongodb
 
   streamlit:
     build: streamlit/
     depends_on:
       - app
-      - mongo  # Asegura que MongoDB esté activo antes de iniciar Streamlit
     ports:
       - 8501:8501
     networks:
@@ -26,20 +36,9 @@ services:
     volumes:
       - mis_datos:/var/lib/docker/volumes/aa-streamlit-fastapi_mis_datos/_data
 
-  mongo:
-    image: mongo:latest
-    container_name: mongo
-    networks:
-      - deploy_network
-    ports:
-      - 27017:27017  # Exponer puerto de MongoDB
-    volumes:
-      - mongo_data:/data/db  # Volumen para persistencia de datos de MongoDB
-
 networks:
   deploy_network:
     driver: bridge
-    
+
 volumes:
   mis_datos:
-  mongo_data:
