--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"  # Usa la última versión estable compatible
+
 services:
   app:
     build:
@@ -11,7 +13,7 @@ services:
     depends_on:
       - mongodb
     environment:
-      - MONGO_URI=mongodb://root:example@mongodb:27017/?authSource=admin
+      - MONGO_URI=mongodb://root:example@mongodb:27017/clinica_veterinaria?authSource=admin  # Asegura el nombre de la BD aquí
 
   streamlit:
     build:
