--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,23 +14,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Paso 1: Descargar el código del repositorio
       - uses: actions/checkout@v4
+
+      # Paso 2: Configurar Python 3.10
       - name: Set up Python 3.10
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
           
+      # Paso 3: Instalar dependencias
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r app/requirements.txt
           pip install -r streamlit/requirements.txt
 
+      # Paso 4: Lint con flake8 para verificar el estilo de código y detectar errores
       - name: Lint with flake8
         run: |
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics  # Mostrar errores críticos
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics  # Mostrar advertencias sin detener el proceso
 
+      # Paso 5: Ejecutar pruebas con pytest
       - name: Test with pytest
         run: |
           pytest test/
