--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,5 +3,4 @@ WORKDIR /project
 COPY requirements.txt /project
 RUN pip install -r requirements.txt
 COPY . /project
-WORKDIR /project/app
-CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app.server:app", "--host", "0.0.0.0", "--port", "8000"]
