Algunos retoques extras para mejorar el funcionamiento del programa y hacerlo lo mejor posible

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,13 +1,9 @@
-pydantic
+pydantic[email]
 fastapi
 pandas
 sqlalchemy
 pytest
 flake8
-pydantic[email]
 pymongo
 psycopg2-binary
-fpdf  # Para generar PDFs
-smtplib  # (parte estándar de Python, no requiere instalación)
-email  # (parte estándar de Python, no requiere instalación)
-python-dotenv  # Para manejar variables de entorno como las de correo
+fpdf
